--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^0.5.12+4
   share: any
-
+  path_provider: ^1.6.27
 
 
   # The following adds the Cupertino Icons font to your application.
